Hiding grease pencil from menu in outliner not updating 3D view. #44476

Closed
opened 2015-04-21 21:13:45 +02:00 by David · 5 comments

System Information
Windows 7 64bit, 8GB memory, AMD Radeon HD 5700 Graphics card

Blender Version
Broken: 2.74.4 e3a6440 (latest from build bot)

Short description of error
bug.png
When hiding or unhiding a grease pencil layer from the right click menu in the outliner, the 3D view will not automatically redraw. However when using the other buttons, the eye in the outliner,or the eye in the Grease Pencil settings in the Properties panel in the 3D view the 3D view does automatically update.

Exact steps for others to reproduce the error
Right click on any grease pencil layer in the outliner, then hide or unhide the GP_Layer, from the right click menu.

Animated gif showing the error.
bug.gif

**System Information** Windows 7 64bit, 8GB memory, AMD Radeon HD 5700 Graphics card **Blender Version** Broken: 2.74.4 e3a6440 (latest from build bot) **Short description of error** ![bug.png](https://archive.blender.org/developer/F165146/bug.png) When hiding or unhiding a grease pencil layer from the right click menu in the outliner, the 3D view will not automatically redraw. However when using the other buttons, the eye in the outliner,or the eye in the Grease Pencil settings in the Properties panel in the 3D view the 3D view does automatically update. **Exact steps for others to reproduce the error** Right click on any grease pencil layer in the outliner, then hide or unhide the GP_Layer, from the right click menu. Animated gif showing the error. ![bug.gif](https://archive.blender.org/developer/F165142/bug.gif)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Davd

Added subscriber: @Davd

This issue was referenced by dc36e1fe39

This issue was referenced by dc36e1fe39f87fabfc9e398139d20f935caf74c3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit dc36e1fe39.

Closed by commit dc36e1fe39.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44476
No description provided.