Fix T44476: Hiding Grease Pencil from Outliner RMB doesn't update 3D View